--- a/learnEs6/h7Promise.html
+++ b/learnEs6/h7Promise.html
@@ -41,6 +41,11 @@
             
         });
 
+        //catch语法糖，相当于then少一个参数
+        p.catch(reason=>{
+            console.warn(reason);
+        });
+
     </script>
 
 </body>
