--- a/learnVue/vue-learn1/index.html
+++ b/learnVue/vue-learn1/index.html
@@ -7,7 +7,8 @@
     <title>My First Vue</title>
   </head>
   <body>
+    <!-- main1.js中会把很多东西都绑定给app使其形成复杂整体 -->
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main1.js"></script>
   </body>
 </html>
