--- a/learnEs6/h7Promise.html
+++ b/learnEs6/h7Promise.html
@@ -35,11 +35,11 @@
 
         //链式调用
         //每个Promise都返回“下一个要做的事情的Promise”
-        p.then(value=>{
+        // p.then(value=>{
 
-        }).then(value=>{
+        // }).then(value=>{
             
-        });
+        // });
 
         //catch语法糖，相当于then少一个参数
         p.catch(reason=>{
